english mistakes fixed

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<li><a href="en.html" title="English" ><img alt="EnglishFlag" src="images/headerimages/english.png"/></a></li>
 					<li><a href="index.html" title="Spanish" ><img alt="SpanishFlag" src="images/headerimages/spanish.png"/></a></li>
 				</ul>
-				<div id="show"><p>Idiomas</p></div>
+				<div id="show"><p>Languages</p></div>
 			</aside>
 
 		</header>
